update name and legacy

--- a/data_processing.tex
+++ b/data_processing.tex
@@ -1,3 +1,8 @@
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Felix Hoffmann, October 2014
+% adapted from Jyotika Bahuguna October 2012
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 %\documentclass{beamer}
 \documentclass[xcolor=table]{beamer}
@@ -81,7 +86,7 @@
 \title {File operations,data parsing and batch files}
 %\subtitle{in sensory cortex}
 
-\author[Jyotika Bahuguna]{Jyotika Bahuguna} %\\ \texttt{sadra.sadeh@bcf.uni-freiburg.de}}
+\author[Felix Hoffmann]{Felix Hoffmann} 
 \institute[BCF]{Bernstein Center Freiburg}
 \date[]{Oct 2012}
 
